--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <body>
         <!-- ===============================START MENU======================================= -->
         <div class="outer">
-            <div class="">
+            <header>
                 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="#">
-                            <img src="img/LOGO-LANDSCAPE-WHITE.png" alt="Blue Orbit Animation Logo" style="width:20rem;" >
+                            <img src="img/LOGO-LANDSCAPE-WHITE.png" alt="Blue Orbit Animation Logo"
+                                style="width:20rem;">
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapsibleNavbar">
@@ -47,23 +48,64 @@
                                 </li>
                                 <li class="nav-item">
                                     <div class="socialIcon">
-                                    <i class="fa fa-facebook"></i>
-                                    <i class="fa fa-instagram"></i>
-                                    <i class="fa fa-twitter"></i>
-                                    <i class="fa fa-youtube-play"></i>
-                                </div>
+                                        <i class="fa fa-facebook"></i>
+                                        <i class="fa fa-instagram"></i>
+                                        <i class="fa fa-twitter"></i>
+                                        <i class="fa fa-youtube-play"></i>
+                                    </div>
                                 </li>
                             </ul>
-                             
+
                         </div>
                     </div>
                 </nav>
-            </div>
+            </header>
 
             <!--  navigation finished -->
             <!--  slider start -->
-            
-            <!-- slider finished -->
+            <!-- The slideshow/carousel -->
+            <section>
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="img/ABOUT-US-BG.jpg" class="d-block w-100" alt="SLIDER IMAGE">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h2>First slide label</h2>
+                          <p>Some representative placeholder content for the first slide.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="SLIDER IMAGE">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h2>Second slide label</h2>
+                          <p>Some representative placeholder content for the second slide.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/COURSES-BG.jpg" class="d-block w-100" alt="SLIDER IMAGE">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h2>Third slide label</h2>
+                          <p>Some representative placeholder content for the third slide.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </section>
+
+        <!-- slider finished -->
 
         </div>
         <!-- =========================================END COURSE======================== -->
