--- a/index.html
+++ b/index.html
@@ -73,21 +73,21 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="img/ABOUT-US-BG.jpg" style="height:98vh" class="d-block w-100" alt="SLIDER IMAGE">
+                        <img id="img" src="img/ABOUT-US-BG.jpg" style="height:98vh" class="d-block w-100" alt="SLIDER IMAGE">
                         <div class="carousel-caption d-none d-md-block">
                           <h2>First slide label</h2>
                           <p>Some representative placeholder content for the first slide.</p>
                         </div>
                       </div> 
                       <div class="carousel-item">
-                        <img src="img/BOTTOM-BG.jpg" style="height:98vh" class="d-block w-100" alt="SLIDER IMAGE">
+                        <img id="img" src="img/BOTTOM-BG.jpg" style="height:98vh" class="d-block w-100" alt="SLIDER IMAGE">
                         <div class="carousel-caption d-none d-md-block">
                           <h2>Second slide label</h2>
                           <p>Some representative placeholder content for the second slide.</p>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="img/COURSES-BG.jpg" style="height:98vh" class="d-block w-100" alt="SLIDER IMAGE">
+                        <img id="img" src="img/COURSES-BG.jpg" style="height:98vh" class="d-block w-100" alt="SLIDER IMAGE">
                         <div class="carousel-caption d-none d-md-block">
                           <h2>Third slide label</h2>
                           <p>Some representative placeholder content for the third slide.</p>
