--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <!--  navigation finished -->
             <!--  slider start -->
             <!-- The slideshow/carousel -->
-            <section>
+            <div class="slider">
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -73,21 +73,21 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img id="img" src="img/ABOUT-US-BG.jpg" style="height:98vh" class="d-block w-100" alt="SLIDER IMAGE">
+                        <img id="img" src="img/ABOUT-US-BG.jpg"  class="d-block w-100" alt="SLIDER IMAGE">
                         <div class="carousel-caption d-none d-md-block">
                           <h2>First slide label</h2>
                           <p>Some representative placeholder content for the first slide.</p>
                         </div>
                       </div> 
                       <div class="carousel-item">
-                        <img id="img" src="img/BOTTOM-BG.jpg" style="height:98vh" class="d-block w-100" alt="SLIDER IMAGE">
+                        <img id="img" src="img/BOTTOM-BG.jpg"  class="d-block w-100" alt="SLIDER IMAGE">
                         <div class="carousel-caption d-none d-md-block">
                           <h2>Second slide label</h2>
                           <p>Some representative placeholder content for the second slide.</p>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img id="img" src="img/COURSES-BG.jpg" style="height:98vh" class="d-block w-100" alt="SLIDER IMAGE">
+                        <img id="img" src="img/COURSES-BG.jpg"  class="d-block w-100" alt="SLIDER IMAGE">
                         <div class="carousel-caption d-none d-md-block">
                           <h2>Third slide label</h2>
                           <p>Some representative placeholder content for the third slide.</p>
@@ -103,7 +103,7 @@
                       <span class="visually-hidden">Next</span>
                     </button>
                   </div>
-            </section>
+                </div>
 
         <!-- slider finished -->
 
