--- a/index.html
+++ b/index.html
@@ -1,114 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="bootstrap.min.css">
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="scss/main.css">
-        <title>BlueOrbit</title>
-    </head>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="scss/main.css">
+    <title>BlueOrbit</title>
+  </head>
 
-    <body>
-        <!-- ===============================START MENU======================================= -->
-        <div class="outer">
-            <header>
-                <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="#">
-                            <img src="img/LOGO-LANDSCAPE-WHITE.png" alt="Blue Orbit Animation Logo"
-                                style="width:20rem;">
-                        </a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapsibleNavbar">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse " id="collapsibleNavbar">
-                            <ul class="navbar-nav ms-auto p-3">
-                                <li class="nav-item">
-                                    <a class="nav-link act" href="#">HOME</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="#">ABOUT US</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="#">COURSES</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="#">WORK PROFILE</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="#">CONTACT US</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="#">OUR EXPERIENCE</a>
-                                </li>
-                                <li class="nav-item">
-                                    <div class="socialIcon">
-                                        <i class="fa fa-facebook"></i>
-                                        <i class="fa fa-instagram"></i>
-                                        <i class="fa fa-twitter"></i>
-                                        <i class="fa fa-youtube-play"></i>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-            </header>
-
-            <!--  navigation finished -->
-            <!--  slider start -->
-            <!-- The slideshow/carousel -->
-            <div class="slider">
-                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    </div>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img id="img" src="img/ABOUT-US-BG.jpg"  class="d-block w-100" alt="SLIDER IMAGE">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h2>First slide label</h2>
-                          <p>Some representative placeholder content for the first slide.</p>
-                        </div>
-                      </div> 
-                      <div class="carousel-item">
-                        <img id="img" src="img/BOTTOM-BG.jpg"  class="d-block w-100" alt="SLIDER IMAGE">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h2>Second slide label</h2>
-                          <p>Some representative placeholder content for the second slide.</p>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img id="img" src="img/COURSES-BG.jpg"  class="d-block w-100" alt="SLIDER IMAGE">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h2>Third slide label</h2>
-                          <p>Some representative placeholder content for the third slide.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
+  <body>
+    <!-- ===============================START MENU======================================= -->
+    <div class="outer">
+      <header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img src="img/LOGO-LANDSCAPE-WHITE.png" alt="Blue Orbit Animation Logo" style="width:20rem;">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse " id="collapsibleNavbar">
+              <ul class="navbar-nav ms-auto p-3">
+                <li class="nav-item">
+                  <a class="nav-link act" href="#">HOME</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">ABOUT US</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">COURSES</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">WORK PROFILE</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">CONTACT US</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">OUR EXPERIENCE</a>
+                </li>
+                <li class="nav-item">
+                  <div class="socialIcon">
+                    <i class="fa fa-facebook"></i>
+                    <i class="fa fa-instagram"></i>
+                    <i class="fa fa-twitter"></i>
+                    <i class="fa fa-youtube-play"></i>
                   </div>
-                </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
 
-        <!-- slider finished -->
-
+      <!--  navigation finished -->
+      <!--  slider start -->
+      <!-- The slideshow/carousel -->
+      <div class="slider">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img id="img" src="img/ABOUT-US-BG.jpg" class="d-block w-100" alt="SLIDER IMAGE">
+              <div class="carousel-caption d-none d-md-block">
+                <h2>BlueOrbit</h2>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img id="img" src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="SLIDER IMAGE">
+              <div class="carousel-caption d-none d-md-block">
+                <h2>BlueOrbit</h2>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img id="img" src="img/COURSES-BG.jpg" class="d-block w-100" alt="SLIDER IMAGE">
+              <div class="carousel-caption d-none d-md-block">
+                <h2>BlueOrbit</h2>
+                <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <!-- =========================================END COURSE======================== -->
-        <script src="bootstrap.min.js"></script>
-    </body>
+      </div>
+      <!-- slider finished -->
+      <!-- about start -->
+      <section>
+        <div class="container-fluid homeAbout">
+          <div class="row">
+            <div class="">
+              <div class="col-sm-6 col-12 imgbox">
+                <img src="img/02-CAPTAIN-AMERICA.png" alt="IMAGE">
+              </div>
+              <div class=" col-sm-6 col-12 my-auto home-about-text">
+                <h2>ABOUT BLUE ORBIT ANIMATION</h2>
+                <P>We already are a professional production house, RZ Taem Production, working in advertisement and commercials since 2016 and have earned a great presence in market in last decade. In order to have a greater and better workforce, we have decided to come forth in professional education under our sister concern "Blue Orbit Animation".</P>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- about finihed -->
+    </div>
+    <!-- =========================================END COURSE======================== -->
+    <script src="bootstrap.min.js"></script>
+  </body>
 
 </html>
