--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- ===============================START MENU======================================= -->
     <div class="outer">
       <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+        <nav class="navbar navbar-expand-md  navbar-dark fixed-top" >
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
               <img src="img/LOGO-LANDSCAPE-WHITE.png" alt="Blue Orbit Animation Logo" style="width:20rem;">
@@ -61,53 +61,56 @@
       <!--  slider start -->
       <!-- The slideshow/carousel -->
       <div class="slider">
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-              aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-              aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-              aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img id="img" src="img/ABOUT-US-BG.jpg" class="d-block w-100" alt="SLIDER IMAGE">
-              <div class="carousel-caption d-none d-md-block">
-                <h2>BlueOrbit</h2>
-                <p>Some representative placeholder content for the first slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img id="img" src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="SLIDER IMAGE">
-              <div class="carousel-caption d-none d-md-block">
-                <h2>BlueOrbit</h2>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img id="img" src="img/COURSES-BG.jpg" class="d-block w-100" alt="SLIDER IMAGE">
-              <div class="carousel-caption d-none d-md-block">
-                <h2>BlueOrbit</h2>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Blue Orbit</h5>
+              <p>First slider sub-heading.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
+    </div>
+
       <!-- slider finished -->
+      <!-- admission section start-->
+        <div class="admission text-white">
+          <h1 class="fw-bold text-uppercase py-3 text-center">Admission open 2022-23</h1>
+        </div>
+      <!-- admission section finished -->
       <!-- about start -->
-      
+      <div class="about">
+        
+      </div>
 
       <!-- about finihed -->
     </div>
