--- a/index.html
+++ b/index.html
@@ -7,7 +7,186 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="main.css">
+    <!-- <link rel="stylesheet" href="main.css"> -->
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+      }
+
+      html {
+        font-size: 62.5%;
+      }
+
+      .outer {
+        margin: 0 10px;
+        -webkit-box-shadow: 0 0 1.8rem 0.2rem #120f22b7;
+        box-shadow: 0 0 1.8rem 0.2rem #120f22b7;
+        /* background-color: aquamarine; */
+        min-height: 2000px;
+      }
+
+      nav {
+        /* background-color: #120f2200; */
+        background-color: #120f227c;
+        font-size: 1.8rem;
+        margin: 0 10px;
+      }
+
+      /* nav::after{
+  content: '';
+  display: table;
+  clear: both;
+} */
+      .navbar ul li a {
+        position: relative;
+        -webkit-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+      }
+
+      .navbar ul li a:hover {
+        -webkit-transform: scale(0.91);
+        transform: scale(0.91);
+        -webkit-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+      }
+
+      .navbar ul li a::after {
+        content: "";
+        width: 0;
+        height: 0.3rem;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background-color: #621ffd;
+        -webkit-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+      }
+
+      .navbar ul li .act::before {
+        content: "";
+        width: 100%;
+        height: 0.05rem;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: #fff;
+        -webkit-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+      }
+
+      .navbar ul li .act::after {
+        content: "";
+        width: 100%;
+        height: 0.05rem;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background-color: #fff;
+        -webkit-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+      }
+
+      .navbar ul li a:hover::after {
+        width: 100%;
+        -webkit-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+      }
+
+      .navbar .socialIcon {
+        margin-left: 5rem;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-transition: all 0.7s ease;
+        transition: all 0.7s ease;
+      }
+
+      .navbar .socialIcon i:hover {
+        -webkit-box-shadow: 0 0 1rem 0.2rem #dfe1eb inset;
+        box-shadow: 0 0 1rem 0.2rem #dfe1eb inset;
+        -webkit-transition: all 0.7s ease;
+        transition: all 0.7s ease;
+        border: none;
+      }
+
+      .navbar .socialIcon .fa {
+        width: 4rem;
+        height: 4rem;
+        border: 0.01rem solid white;
+        border-radius: 50%;
+        margin: 0.3rem;
+        color: white;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+      }
+
+      .navbar .socialIcon .fa-facebook:hover {
+        color: #161aeb;
+      }
+
+      .navbar .socialIcon .fa-instagram:hover {
+        color: #ed127c;
+      }
+
+      .navbar .socialIcon .fa-youtube-play:hover {
+        color: red;
+      }
+
+      .navbar .socialIcon .fa-twitter:hover {
+        color: #a9d0e5;
+      }
+
+      /* navbar finished  */
+      /*  slider start */
+      .slider {
+        margin-top: 100px;
+      }
+
+      .slider h5 {
+        font-size: 4rem;
+
+      }
+
+      .slider p {
+        font-size: 1.8rem;
+      }
+
+      /*  slider finished */
+      /* admission start */
+      .admission,
+      h1 {
+        height: 6rem;
+        letter-spacing: .3rem;
+        text-shadow: 0px 0px 4px #0000ff;
+        font-size: 28px;
+      }
+
+      /* admission finished */
+      /* about start */
+
+      /* about finished */
+
+    </style>
     <title>BlueOrbit</title>
   </head>
 
@@ -15,7 +194,7 @@
     <!-- ===============================START MENU======================================= -->
     <div class="outer">
       <header>
-        <nav class="navbar navbar-expand-md  navbar-dark fixed-top" >
+        <nav class="navbar navbar-expand-md  navbar-dark fixed-top">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
               <img src="img/LOGO-LANDSCAPE-WHITE.png" alt="Blue Orbit Animation Logo" style="width:20rem;">
@@ -61,55 +240,60 @@
       <!--  slider start -->
       <!-- The slideshow/carousel -->
       <div class="slider">
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Blue Orbit</h5>
+                <p>First slider sub-heading.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Blue Orbit</h5>
-              <p>First slider sub-heading.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="img/BOTTOM-BG.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
-    </div>
 
       <!-- slider finished -->
       <!-- admission section start-->
-        <div class="admission text-white">
-          <h1 class="fw-bold text-uppercase py-3 text-center">Admission open 2022-23</h1>
-        </div>
+      <div class="admission text-white">
+        <h1 class="fw-bold text-uppercase py-3 text-center">Admission open 2022-23</h1>
+      </div>
       <!-- admission section finished -->
       <!-- about start -->
       <div class="about">
-        
+
       </div>
 
       <!-- about finihed -->
