--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                                 <a class="nav-link active" href="about.html">ABOUT US</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="#">COURSES</a>
+                                <a class="nav-link active" href="courses.html">COURSES</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="#">WORK PROFILE</a>
+                                <a class="nav-link active" href="gallery.html">WORK PROFILE</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="#">CONTACT US</a>
+                                <a class="nav-link active" href="contact.html">CONTACT US</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="#">OUR EXPERIENCE</a>
@@ -247,7 +247,7 @@
         <!-- gallery finished -->
         <!-- footer start -->
         <div class="footer">
-        <p class="text-center text-white-50 fs-3 p-3"> &reg;   all right reserved. &copy;copyright 2012-22 designed by Blue Orbit Animation. $developed by Er. Sunita & Er. Akash</p>
+        <p class="text-center text-white-50 fs-5 p-3"> &reg;   all right reserved. &copy;copyright 2012-22 designed by Blue Orbit Animation. $developed by Er. Akash</p>
         </div>
         <!-- footer finished -->
 
